# tdd

tdd-katas/christmas-tree/christmas-tree-python/christmastree/: README.md  pyproject.toml
tdd-katas/christmas-tree/christmas-tree-python/christmastree/src/: ChristmasTree.py
tdd-katas/christmas-tree/christmas-tree-python/christmastree/test/: ChristmasTree_test.py
tdd-katas/christmas-tree/christmastree/: README.md  index.html  package-lock.json
tdd-katas/christmas-tree/christmastree/spec/: ChristmasTree.spec.js
tdd-katas/christmas-tree/christmastree/src/: ChristmasTree.js
