[tool.poetry]
name = "ChristmasTree"
version = "0.1.0"
description = "This kata practices TDD"
authors = ["Mark Spijkerman  <mark.spijkerman@navara.nl>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"

pytest-watch = "^4.2.0"
pytest = "^8.3.4"
pyhamcrest = "^2.1.0"






[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
